<resources>
    <string name="app_name">pooexercise</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <!-- Menus -->
    <string name="menu_home">Home</string>
    <string name="menu_integrante">Integrantes</string>
    <string name="menu_sair">Sair</string>

    <!-- inputs -->
    <!-- Telas login -->
    <string name="user_name">Digite seu e-mail</string>
    <string name="user_password">Digite sua senha</string>
    <string name="termos_de_uso">Termos de uso</string>
    <!-- Buttons -->
    <string name="btn_register_institution">Cadastrar Instituição</string>
    <string name="btn_enter">Entrar</string>

    <!-- Tela cadastro instituicao-->
    <string name="screen_add_instituição">Cadastro Instituição</string>
    <string name="nome_instituicao">Digite o nome da instituição</string>
    <string name="email_instituicao">Digite o E-mail para sua conta</string>
    <string name="senha_instituicao">Digite a senha para sua conta</string>
    <string name="senha_confirmar">Digite a confirmação da sua senha</string>
    <string name="cnpj_instituicao">Digite o CNPJ da sua instituição</string>
    <string name="telefone_instituicao">Digite o telefone da sua instituição</string>
    <string name="endereco_instituicao">Digite o endereço da sua instituição</string>
    <string name="selecione_foto_instituição">Selecione uma foto pra instituiçao</string>
    <!-- buttons tela cadastro instituição -->
    <string name="btn_logo_instituição">Logo Da Instituição</string>

    <!-- Tela cadastro animal-->
    <string name="screen_add_dog">Cadastro Animal</string>
    <string name="nome_animal">Digite o nome do animal</string>
    <string name="raca_animal">Digite a raça do animal</string>
    <string name="idade_animal">Digite a idade do animal</string>
    <string name="porte_animal">Digite o porte do animal</string>
    <string name="medicamento_animal">Digite os medicamentos</string>
    <string name="horario_medicamento">Digite o horários dos medicamentos</string>
    <string name="observacoes_animal">Digite observações sobre o animal</string>
    <string name="selecione_foto_animal">Selecione uma foto pro animal</string>
    <!-- buttons tela cadastro animal -->
    <string name="btn_historico_vacinacao">Histórico Vacinação</string>
    <string name="btn_foto_animal">Salvar imagem do animal</string>


    <!-- Tela cadastro integrante-->
    <string name="screen_add_integrante">Cadastro Integrantes</string>
    <string name="nome_integrante">Digite o nome do integrante</string>
    <string name="email_integrante">Digite o E-mail do integrante</string>
    <string name="senha_integrante">Digite a senha para conta do integrante</string>
    <string name="senha_confirmar_integrante">Digite a confirmação da senha</string>
    <string name="funcao_integrante">Digite a função do integrante</string>
    <string name="cpf_integrante">Digite o CPF do integrante</string>
    <string name="rg_integrante">Digite o RG do integrante</string>
    <string name="telefone_integrante">Digite o telefone do integrante</string>
    <string name="selecione_foto_integrante">Selecione uma foto pro integrante</string>
    <!-- buttons tela cadastro instituição -->
    <string name="btn_documento_integrante">Documentos</string>
    <string name="btn_fotos_integrante">Foto Integrante</string>

    <!-- Card perfil do animal-->
    <string name="name_animal_card">Nome do animal</string>
    <string name="raca_animal_card">Raça do animal</string>
    <string name="idade_animal_card">Idade do animal</string>
    <string name="porte_animal_card">Porte do animal</string>
    <string name="medicamento_animal_card">Medicamentos do animal</string>
    <string name="horarios_medicamento_animal_card">Horários dos medicamentos do animal</string>
    <string name="observacoes_animal_card">Observações sobre o animal</string>


    <!-- Card perfil do integrante-->
    <string name="name_integrante_card">Nome do integrante</string>
    <string name="funcao_integrante_card">Função do integrante</string>
    <string name="rg_integrante_card">RG do integrante</string>
    <string name="email_integrante_card">E-mail do integrante</string>
    <string name="password_integrante_card">Senha do integrante</string>
    <string name="text_cpf_integrante_card">CPF do integrante</string>
    <string name="text_phone_integrante">Telefone do integrante</string>

    <!-- Card perfil do instituição-->
    <string name="name_institution_card">Nome da instituição</string>
    <string name="cnpj_instituicao_perfil">CNPJ da instituição</string>
    <string name="endereco_instituicao_card">Endereço da instituição</string>
    <string name="email_instituicao_card">E-mail da instituição</string>
    <string name="telefone_instituicao_perfil">Telefone da instituição</string>

    <!-- buttons -->
    <string name="menu_busca">buscar</string>
    <string name="mudar_idioma">Mudar idioma da aplicação</string>

    <string name="termos_de_uso_text">1. Termos  Ao acessar ao site Aplicativo pooexercise, concorda em cumprir estes termos de serviço, todas as leis e regulamentos aplicáveis e concorda que é responsável pelo cumprimento de todas as leis locais aplicáveis. Se você não concordar com algum desses termos, está proibido de usar ou acessar este site. Os materiais contidos neste site são protegidos pelas leis de direitos autorais e marcas comerciais aplicáveis.  2. Uso de Licença  É concedida permissão para baixar temporariamente uma cópia dos materiais (informações ou software) no site Aplicativo pooexercise , apenas para visualização transitória pessoal e não comercial. Esta é a concessão de uma licença, não uma transferência de título e, sob esta licença, você não pode:  1. modificar ou copiar os materiais;  2. usar os materiais para qualquer finalidade comercial ou para exibição pública (comercial ou não comercial); 3. tentar descompilar ou fazer engenharia reversa de qualquer software contido no site Aplicativo pooexercise; 4. remover quaisquer direitos autorais ou outras notações de propriedade dos materiais; ou 5. transferir os materiais para outra pessoa ou \'espelhe\' os materiais em qualquer outro servidor.  Esta licença será automaticamente rescindida se você violar alguma dessas restrições e poderá ser rescindida por Aplicativo pooexercise a qualquer momento\. Ao encerrar a visualização desses materiais ou após o término desta licença, você deve apagar todos os materiais baixados em sua posse, seja em formato eletrónico ou impresso.  3. Isenção de responsabilidade  1. Os materiais no site da Aplicativo pooexercise são fornecidos \'como estão\'. Aplicativo pooexercise não oferece garantias, expressas ou implícitas, e, por este meio, isenta e nega todas as outras garantias, incluindo, sem limitação, garantias implícitas ou condições de comercialização, adequação a um fim específico ou não violação de propriedade intelectual ou outra violação de direitos.  2. Além disso, o Aplicativo pooexercise não garante ou faz qualquer representação relativa à precisão, aos resultados prováveis ou à confiabilidade do uso dos materiais em seu site ou de outra forma relacionado a esses materiais ou em sites vinculados a este site.  4. Limitações  Em nenhum caso o Aplicativo pooexercise ou seus fornecedores serão responsáveis por quaisquer danos (incluindo, sem limitação, danos por perda de dados ou lucro ou devido a interrupção dos negócios) decorrentes do uso ou da incapacidade de usar os materiais em Aplicativo pooexercise, mesmo que Aplicativo pooexercise ou um representante autorizado da Aplicativo pooexercise tenha sido notificado oralmente ou por escrito da possibilidade de tais danos. Como algumas jurisdições não permitem limitações em garantias implícitas, ou limitações de responsabilidade por danos conseqüentes ou incidentais, essas limitações podem não se aplicar a você.  5. Precisão dos materiais  Os materiais exibidos no site da Aplicativo pooexercise podem incluir erros técnicos, tipográficos ou fotográficos. Aplicativo pooexercise não garante que qualquer material em seu site seja preciso, completo ou atual. Aplicativo pooexercise pode fazer alterações nos materiais contidos em seu site a qualquer momento, sem aviso prévio. No entanto, Aplicativo pooexercise não se compromete a atualizar os materiais.  6. Links  O Aplicativo pooexercise não analisou todos os sites vinculados ao seu site e não é responsável pelo conteúdo de nenhum site vinculado. A inclusão de qualquer link não implica endosso por Aplicativo pooexercise do site. O uso de qualquer site vinculado é por conta e risco do usuário.  Modificações  O Aplicativo pooexercise pode revisar estes termos de serviço do site a qualquer momento, sem aviso prévio. Ao usar este site, você concorda em ficar vinculado à versão atual desses termos de serviço.  Lei aplicável  Estes termos e condições são regidos e interpretados de acordo com as leis do Aplicativo pooexercise e você se submete irrevogavelmente à jurisdição exclusiva dos tribunais naquele estado ou localidade.</string>


</resources>