<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.CadastroIntegrante">


    <Button
        android:id="@+id/btn_fechar_cadastro_integrante"
        android:layout_width="@dimen/margin_default_large"
        android:layout_height="@dimen/margin_default_large"
        android:layout_marginStart="@dimen/margin_default_minimum"
        android:layout_marginTop="@dimen/margin_default_minimum"
        android:background="@drawable/ic_img_fechar"
        android:onClick="onClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_tittle_add_integrante"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_default"
                    android:layout_marginTop="@dimen/margin_default_large"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/screen_add_integrante"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_tittle" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_lateral"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_lateral"
                    android:hint="@string/nome_integrante">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edttext_nome_integrante"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textShortMessage"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_lateral"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_lateral"
                    android:hint="@string/email_integrante">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edttext_email_integrante"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textShortMessage"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_lateral"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_lateral"
                    android:hint="@string/senha_integrante">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edttext_senha_integrante"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_lateral"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_lateral"
                    android:hint="@string/senha_confirmar_integrante">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edttext_confirma_senha_integrante"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_lateral"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_lateral"
                    android:hint="@string/funcao_integrante">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edttext_funcao_integrante"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textShortMessage"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_lateral"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_lateral"
                    android:hint="@string/cpf_integrante">

                    <com.vicmikhailau.maskededittext.MaskedEditText
                        android:id="@+id/edttext_cpf_integrante"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        app:mask="###.###.###-##" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_lateral"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_lateral"
                    android:hint="@string/rg_integrante">

                    <com.vicmikhailau.maskededittext.MaskedEditText
                        android:id="@+id/edttext_rg_integrante"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        app:mask="##.###.###-#" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_lateral"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_lateral"
                    android:hint="@string/telefone_integrante">

                    <com.vicmikhailau.maskededittext.MaskedEditText
                        android:id="@+id/edttext_telefone_integrante"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        app:mask="##-#####-####" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/text_view_photo_integrante"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_default"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/selecione_foto_integrante"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_button" />

                <ImageView
                    android:id="@+id/imageView_upload_integrante_photo"
                    android:layout_width="@dimen/image_width"
                    android:layout_height="@dimen/image_height"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginBottom="@dimen/margin_default_micro"
                    android:onClick="onClick"
                    android:src="@drawable/ic_add_image" />

                <ProgressBar
                    android:id="@+id/progress_bar_integrante"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_default"
                    android:visibility="invisible" />

            </LinearLayout>

        </ScrollView>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_btn_cadastrar_integrante_tela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_default"
        android:layout_marginBottom="@dimen/margin_default_large"
        android:backgroundTint="@color/white"
        android:onClick="onClick"
        android:src="@drawable/ic_img_check_button"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="36dp" />
</androidx.constraintlayout.widget.ConstraintLayout>