<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.CadastroAnimal">

    <Button
        android:id="@+id/btn_fechar_cadastro_animal"
        android:layout_width="@dimen/margin_default_large"
        android:layout_height="@dimen/margin_default_large"
        android:layout_marginStart="@dimen/margin_default_minimum"
        android:layout_marginTop="@dimen/margin_default_minimum"
        android:background="@drawable/ic_img_fechar"
        android:onClick="onClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_tittle_add_animal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_default"
                    android:layout_marginTop="@dimen/margin_default_large"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/screen_add_dog"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_tittle" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_lateral"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_lateral"
                    android:hint="@string/nome_animal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edttext_animal_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textShortMessage" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_lateral"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_lateral"
                    android:hint="@string/raca_animal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edttext_raca_animal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textShortMessage" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_lateral"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_lateral"
                    android:hint="@string/idade_animal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edttext_idade_animal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_lateral"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_lateral"
                    android:hint="@string/porte_animal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edttext_porte_animal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textShortMessage" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_lateral"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_lateral"
                    android:hint="@string/medicamento_animal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edttext_medicamento_animal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textShortMessage" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_lateral"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_lateral"
                    android:hint="@string/horario_medicamento">

                    <com.vicmikhailau.maskededittext.MaskedEditText
                        android:id="@+id/edttext_horario_medicamento"
                        app:mask="##:## ##:## ##:##"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="datetime" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_lateral"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_lateral"
                    android:hint="@string/observacoes_animal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edttext_observacoes_animal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textLongMessage" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/text_view_foto_animal_choose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_default"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/selecione_foto_animal"
                    android:textSize="@dimen/text_size_button"
                    android:textColor="@color/black"/>

                <ImageView
                    android:id="@+id/imageView_upload_photo"
                    android:layout_width="@dimen/image_width"
                    android:layout_height="@dimen/image_height"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginBottom="@dimen/margin_default_micro"
                    android:src="@drawable/ic_add_image"
                    android:onClick="onClick" />

                <ProgressBar
                    android:id="@+id/progress_bar_animal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:layout_marginBottom="@dimen/margin_default"/>

            </LinearLayout>

        </ScrollView>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_btn_cadastrar_animal_tela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_default"
        android:layout_marginBottom="@dimen/margin_default_large"
        android:backgroundTint="@color/white"
        android:onClick="onClick"
        android:src="@drawable/ic_img_check_button"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="36dp" />

</androidx.constraintlayout.widget.ConstraintLayout>